--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<h1>Resumo de Alice:Madness Returns</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <title>Alice:Madness Returns</title>
+        <link rel="stylesheet" hret="style.css"
+    </head>
+<body>
 
-<p>É versão macabra e perturbadora do mundo adulto de Alice Lidell, 
- que após ser culpada de colocar fogo na sua própria casa, matando seus pais e irmã nas chamas, 
- ela passa a viver em um asilo para os clinicamente insanos.Madness Returns nos coloca no 
- controle de uma Alice anos mais velha, perambulando pelos corredores do asilo e as ruas de 
+<h1>Alice:Madness Returns</h1>
+
+<p>É versão macabra e perturbadora do mundo adulto de Alice Lidell, que após ser culpada de 
+ colocar fogo na sua própria casa, matando seus pais e irmã nas chamas, ela passa a viver 
+ em um asilo para os clinicamente insanos.Madness Returns nos coloca no controle de uma 
+ Alice anos mais velha, perambulando pelos corredores do asilo e as ruas de 
  Londres no período vitoriano. Com o auxílio profissional do psiquiatra Dr. Angus Bumby, ela 
  recebe sessões de hipnotismo que ajudam a esquecer a traumática noite do incêndio. Mas a 
  senhorita Lidell alterna sua visão da realidade com alucinações da então Wonderland, e de 
@@ -21,3 +30,5 @@
  e a transforma em uma verdadeira versão feminina de Kratos. Enquanto a faca Vorpal Blade 
  dilacera inimigos próximos, o cavalo de brinquedo Hobby Horse se encarrega de esmagá-los, e o 
  triturador de pimenta Pepper Grinder atinge qualquer alvo à distância.</p>
+ </body>
+ </html>
