--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 <body>
 
-<h1><strong>Alice:Madness Returns</strong></h1>
+<h1>Alice:Madness Returns</h1>
 
 <p>É versão macabra e perturbadora do mundo adulto de Alice Lidell, que após ser culpada de 
  colocar fogo na sua própria casa, matando seus pais e irmã nas chamas, ela passa a viver 
