--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Alice:Madness Returns</title>
-        <link rel="stylesheet" hret="style.css"
+        <link rel="stylesheet" hret="style.css">
     </head>
+
 <body>
 
 <h1>Alice:Madness Returns</h1>
