--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Alice:Madness Returns</title>
-        <link rel="stylesheet" hret="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
 <body>
