--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<h1>Alice:Madness Returns</h1>
+<h1><strong>Alice:Madness Returns</strong></h1>
 
 <img id="imagem" src="Alice-Madness-Returns-02.jpg">
 
