--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     </head>
 
 <body>
-
-<h1><strong>Alice:Madness Returns</strong></h1>
-
-<img id="imagem" src="Alice-Madness-Returns-02.jpg">
-
-<p>É versão macabra e perturbadora do mundo adulto de Alice Lidell, que após ser culpada de 
+    <header class="cabeçalho">  
+        <h1 class="cabeçalho-título"><strong>Alice:Madness Returns</strong></h1>
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item">Jogo</li>
+        </ul>
+    </header>
+   
+    <section class="Jogo"></section>
+    <div class="Jogo-div-conteudo">
+      <h2 class="jogo-título">Resumo do jogo</h2>
+      <p class="Jogo-texto-um">É versão macabra e perturbadora do mundo adulto de Alice Lidell, que após ser culpada de 
  colocar fogo na sua própria casa, matando seus pais e irmã nas chamas, ela passa a viver 
  em um asilo para os clinicamente insanos.Madness Returns nos coloca no controle de uma 
  Alice anos mais velha, perambulando pelos corredores do asilo e as ruas de 
@@ -22,8 +27,7 @@
  volta às Maravilhas, agora totalmente corrompida por conta de um certo Trem Infernal que vem 
  deixando um rastro de ruína por onde passa. Alice deve descobrir o que ou quem está dirigindo 
  este veículo e impedí-lo.</p>
-
-<p>A jogabilidade transcorre em, basicamente, três níveis: plataforma tridimensional, combates 
+ <p class="Jogo-texto-dois">A jogabilidade transcorre em, basicamente, três níveis: plataforma tridimensional, combates 
  em terceira pessoa e diversos puzzles e quebra-cabeças que pedem por solução. Como este não é 
  um jogo para o público infantil, todos os níveis requerem esforço em particular para serem 
  vencidos. As plataformas são longas e muitas vezes de difícil alcance, exigindo certa destreza 
@@ -33,5 +37,8 @@
  e a transforma em uma verdadeira versão feminina de Kratos. Enquanto a faca Vorpal Blade 
  dilacera inimigos próximos, o cavalo de brinquedo Hobby Horse se encarrega de esmagá-los, e o 
  triturador de pimenta Pepper Grinder atinge qualquer alvo à distância.</p>
+
+      <img class="Jogo-imagem" id="imagem" src="Alice-Madness-Returns-02.jpg">
+
  </body>
  </html>
